# api/quiz_ms-quiz-openapi.yaml
@@ -43,179 +43,6 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/QuizResponse"
-  /v1/quizzes/{id}:
-    get:
-      summary: "GET v1/quizzes/{id}"
-      operationId: "getQuiz"
-      parameters:
-        - name: "id"
-          in: "path"
-          required: true
-          schema:
-            type: "integer"
-            format: "int64"
-        - name: "pageNumber"
-          in: "query"
-          required: true
-          schema:
-            type: "integer"
-            format: "int32"
-        - name: "pageSize"
-          in: "query"
-          required: true
-          schema:
-            type: "integer"
-            format: "int32"
-        - name: "x-user-id"
-          in: "header"
-          required: true
-          schema:
-            type: "string"
-        - name: "x-user-email"
-          in: "header"
-          required: true
-          schema:
-            type: "string"
-        - name: "x-user-roles"
-          in: "header"
-          required: true
-          schema:
-            type: "string"
-      responses:
-        "200":
-          description: "OK"
-          content:
-            '*/*':
-              schema:
-                $ref: "#/components/schemas/QuizResponse"
-  /v1/quizzes/me/in-progress:
-    get:
-      summary: "GET v1/quizzes/me/in-progress"
-      operationId: "getInProgressQuiz"
-      parameters:
-        - name: "pageNumber"
-          in: "query"
-          required: true
-          schema:
-            type: "integer"
-            format: "int32"
-        - name: "pageSize"
-          in: "query"
-          required: true
-          schema:
-            type: "integer"
-            format: "int32"
-        - name: "x-user-id"
-          in: "header"
-          required: true
-          schema:
-            type: "string"
-        - name: "x-user-email"
-          in: "header"
-          required: true
-          schema:
-            type: "string"
-        - name: "x-user-roles"
-          in: "header"
-          required: true
-          schema:
-            type: "string"
-      responses:
-        "200":
-          description: "OK"
-          content:
-            '*/*':
-              schema:
-                $ref: "#/components/schemas/QuizResponse"
-  /v1/quizzes/me/completed:
-    get:
-      summary: "GET v1/quizzes/me/completed"
-      operationId: "getCompletedQuiz"
-      parameters:
-        - name: "pageNumber"
-          in: "query"
-          required: true
-          schema:
-            type: "integer"
-            format: "int32"
-        - name: "pageSize"
-          in: "query"
-          required: true
-          schema:
-            type: "integer"
-            format: "int32"
-        - name: "x-user-id"
-          in: "header"
-          required: true
-          schema:
-            type: "string"
-        - name: "x-user-email"
-          in: "header"
-          required: true
-          schema:
-            type: "string"
-        - name: "x-user-roles"
-          in: "header"
-          required: true
-          schema:
-            type: "string"
-      responses:
-        "200":
-          description: "OK"
-          content:
-            '*/*':
-              schema:
-                $ref: "#/components/schemas/QuizListResponse"
-  /v1/quizzes/{id}/mcqs/{mcqId}/attempt:
-    put:
-      summary: "PUT v1/quizzes/{id}/mcqs/{mcqId}/attempt"
-      operationId: "updateAttempt"
-      parameters:
-        - name: "id"
-          in: "path"
-          required: true
-          schema:
-            type: "integer"
-            format: "int64"
-        - name: "mcqId"
-          in: "path"
-          required: true
-          schema:
-            type: "integer"
-            format: "int64"
-        - name: "x-user-id"
-          in: "header"
-          required: true
-          schema:
-            type: "string"
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/AttemptRequest"
-        required: true
-      responses:
-        "204":
-          description: "No Content"
-  /v1/quizzes/{id}/abandon:
-    patch:
-      summary: "PATCH v1/quizzes/{id}/abandon"
-      operationId: "abandonQuiz"
-      parameters:
-        - name: "id"
-          in: "path"
-          required: true
-          schema:
-            type: "integer"
-            format: "int64"
-        - name: "x-user-id"
-          in: "header"
-          required: true
-          schema:
-            type: "string"
-      responses:
-        "204":
-          description: "No Content"
 components:
   schemas:
     QuizRequest:
@@ -271,6 +98,12 @@ components:
     MCQResponse:
       type: "object"
       properties:
+        attemptOption:
+          type: "integer"
+          format: "int32"
+        attemptOn:
+          type: "string"
+          format: "date-time"
         id:
           type: "integer"
           format: "int64"
@@ -305,12 +138,6 @@ components:
           format: "date-time"
         createdBy:
           type: "string"
-        attemptOption:
-          type: "integer"
-          format: "int32"
-        attemptOn:
-          type: "string"
-          format: "date-time"
     QuizResponse:
       type: "object"
       properties:
@@ -318,9 +145,7 @@ components:
           type: "integer"
           format: "int64"
         mcqs:
-          type: "array"
-          items:
-            $ref: "#/components/schemas/MCQResponse"
+          $ref: "#/components/schemas/MCQResponse"
         status:
           type: "string"
           enum:
@@ -328,61 +153,5 @@ components:
             - "COMPLETED"
             - "ABANDONED"
         points:
-          type: "integer"
-          format: "int32"
-        pageNumber:
-          type: "integer"
-          format: "int32"
-        pageSize:
-          type: "integer"
-          format: "int32"
-        totalPages:
-          type: "integer"
-          format: "int32"
-        totalRecords:
-          type: "integer"
-          format: "int64"
-    SimpleQuizResponse:
-      type: "object"
-      properties:
-        id:
-          type: "integer"
-          format: "int64"
-        mcqs:
-          type: "array"
-          items:
-            $ref: "#/components/schemas/MCQResponse"
-        status:
-          type: "string"
-          enum:
-            - "IN_PROGRESS"
-            - "COMPLETED"
-            - "ABANDONED"
-        points:
-          type: "integer"
-          format: "int32"
-    QuizListResponse:
-      type: "object"
-      properties:
-        pageNumber:
-          type: "integer"
-          format: "int32"
-        pageSize:
-          type: "integer"
-          format: "int32"
-        totalPages:
-          type: "integer"
-          format: "int32"
-        totalRecords:
-          type: "integer"
-          format: "int64"
-        quizzes:
-          type: "array"
-          items:
-            $ref: "#/components/schemas/SimpleQuizResponse"
-    AttemptRequest:
-      type: "object"
-      properties:
-        attemptOption:
           type: "integer"
           format: "int32"
