# src/main/java/com/quemistry/quiz_ms/controller/model/QuizResponse.java
@@ -1,11 +1,11 @@
 package com.quemistry.quiz_ms.controller.model;
 
 import com.quemistry.quiz_ms.model.QuizStatus;
-import java.util.List;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
 import lombok.NoArgsConstructor;
+import org.springframework.data.domain.Page;
 
 @Data
 @NoArgsConstructor
@@ -13,11 +13,7 @@ import lombok.NoArgsConstructor;
 @Builder
 public class QuizResponse {
   private Long id;
-  private List<MCQResponse> mcqs;
+  private Page<MCQResponse> mcqs;
   private QuizStatus status;
   private Integer points;
-  private Integer pageNumber;
-  private Integer pageSize;
-  private Integer totalPages;
-  private Long totalRecords;
 }
